More optimizations